Revert to old readFileToString - check with David